# nectrra-obsidian

./: Cargo.toml  README.md  checkpoint.safetensors
nectrra-web/: .firebaserc  index.html  package-lock.json  package.json
nectrra-web/.firebase/: hosting.ZGlzdA.cache
nectrra-web/src/: App.jsx  index.css
nectrra-web/src/components/: ArchitecturePage.jsx  ChatInterface.jsx  LandingPage.jsx
obsidian-ml/: Cargo.toml
obsidian-ml/src/: aggregation.rs  lib.rs  model.rs  ssm.rs  ternary.rs  training.rs
obsidian-node/: Cargo.toml  server.js
obsidian-node/src/: api.rs  corpus.rs  dataloader.rs  main.rs  mcts.rs  rlaif.rs  split_brain.rs  trainer_daemon.rs
obsidian-p2p/: Cargo.toml
obsidian-p2p/src/: lib.rs
