[package]
name = "obsidian-node"
version = "0.1.0"
edition = "2024"

[dependencies]
obsidian-p2p = { path = "../obsidian-p2p" }
obsidian-ml = { path = "../obsidian-ml" }
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "time"] }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candle-core = "0.4.1"
tokenizers = "0.19.1"
